--- a/templates/_includes/article_infos.html
+++ b/templates/_includes/article_infos.html
@@ -1,6 +1,6 @@
 <p class="meta">
   <span class="byline author vcard">
-    Posted by <span class="fn">
+    发布人： <span class="fn">
       {% if AUTHORS_SAVE_AS %}
         <a href="{{ SITEURL }}/{{ article.author.url }}">{{ article.author }}</a>
       {% else %}
