--- a/templates/category.html
+++ b/templates/category.html
@@ -4,7 +4,7 @@
 <div>
 	<article role="article">
     	<header>
-    		<h1 class="entry-title">Category: {{ category }}</h1>
+    		<h1 class="entry-title">分类: {{ category }}</h1>
     	</header>
 
     	<div id="blog-archives">
