--- a/templates/tags.html
+++ b/templates/tags.html
@@ -1,10 +1,10 @@
 {% extends "base.html" %}
-{% block title %}Tags &mdash; {{ SITENAME }}{% endblock %}
+{% block title %}标签 &mdash; {{ SITENAME }}{% endblock %}
 {% block content %}
 <div>
 	<article role="article">
     	<header>
-    		<h1 class="entry-title">Blog Tags</h1>
+    		<h1 class="entry-title">博文标签</h1>
     	</header>
 
 	<p>
