--- a/templates/_includes/footer.html
+++ b/templates/_includes/footer.html
@@ -1,11 +1,11 @@
 <p>
   {% if LICENSE %}
-      {{ LICENSE }} 
+      {{ LICENSE }}
   {% else %}
     {% set years = dates|groupby('date.year')|sort(reverse=False) %}
     {% set sinceYear = years|first|first|default('2014') %}
     {% set toYear = years|last|first|default('2014') %}
-    Copyright &copy; {% if sinceYear == toYear %} {{ sinceYear }} {% else %} {{ sinceYear }}&ndash;{{ toYear }} {% endif%} {{ AUTHOR }} &mdash;
+    版权所有 &copy; {% if sinceYear == toYear %} {{ sinceYear }} {% else %} {{ sinceYear }}&ndash;{{ toYear }} {% endif%} {{ AUTHOR }} &mdash;
   {% endif %}
-  <span class="credit">Powered by <a href="http://getpelican.com">Pelican</a></span>
+  <span class="credit">自豪地采用 <a href="http://getpelican.com">Pelican</a> 技术</span>
 </p>
