--- a/templates/archives.html
+++ b/templates/archives.html
@@ -20,7 +20,7 @@
                             <span class="year">{{ article.date.strftime('%Y') }}</span>
                         </time>
                         <footer>
-                            <span class="categories">posted in
+                            <span class="categories">发布 在
                                 <a class='category' href='{{ SITEURL }}/{{ article.category.url }}'>{{ article.category }}</a>
                                 {{ tag }}
                             </span>
