--- a/templates/authors.html
+++ b/templates/authors.html
@@ -1,10 +1,10 @@
 {% extends "base.html" %}
-{% block title %}Authors &mdash; {{ SITENAME }}{% endblock %}
+{% block title %}博客作者 &mdash; {{ SITENAME }}{% endblock %}
 {% block content %}
 <div>
 	<article role="article">
     	<header>
-    		<h1 class="entry-title">Blog Authors</h1>
+    		<h1 class="entry-title">博文作者</h1>
     	</header>
 
 	{% for author, articles in authors|sort %}
