--- a/templates/base.html
+++ b/templates/base.html
@@ -80,5 +80,6 @@
   <script src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/js/ender.js"></script>
   <script src="{{ SITEURL }}/{{ THEME_STATIC_DIR }}/js/octopress.js" type="text/javascript"></script>
   {% include '_includes/after_footer.html' %}
+  {{ ace_editor }}
 </body>
 </html>
