--- a/templates/categories.html
+++ b/templates/categories.html
@@ -1,10 +1,10 @@
 {% extends "base.html" %}
-{% block title %}Categories &mdash; {{ SITENAME }}{% endblock %}
+{% block title %}分类 &mdash; {{ SITENAME }}{% endblock %}
 {% block content %}
 <div>
 	<article role="article">
     	<header>
-    		<h1 class="entry-title">Blog Categories</h1>
+    		<h1 class="entry-title">博文分类</h1>
     	</header>
 
 	<p>
