--- a/sass/custom/_fonts.scss
+++ b/sass/custom/_fonts.scss
@@ -10,5 +10,5 @@
 
 $sans: "Microsoft YaHei", "Optima", sans-serif;
 $serif: "Microsoft YaHei", "Baskerville", serif;
-$mono: "Console", "Courier", monospace;
+$mono: "Consolas", "Courier", monospace;
 $heading-font-family: "Microsoft YaHei", "Georgia", "Verdana", sans-serif;
