--- a/templates/archives.html
+++ b/templates/archives.html
@@ -1,10 +1,10 @@
 {% extends "base.html" %}
-{% block title %}{{ ARCHIVE_TITLE|default('Blog Archive') }} &mdash; {{ SITENAME }}{% endblock %}
+{% block title %}{{ ARCHIVE_TITLE|default('Blog 存档') }} &mdash; {{ SITENAME }}{% endblock %}
 {% block content %}
 <div>
   <article role="article">
       <header>
-        <h1 class="entry-title">{{ ARCHIVE_TITLE|default('Blog Archive') }}</h1>
+        <h1 class="entry-title">{{ ARCHIVE_TITLE|default('Blog 存档') }}</h1>
       </header>
 
       <div id="blog-archives">
