--- a/templates/authors.html
+++ b/templates/authors.html
@@ -4,7 +4,7 @@
 <div>
 	<article role="article">
     	<header>
-    		<h1 class="entry-title">博文作者</h1>
+    		<h1 class="entry-title">文章作者</h1>
     	</header>
 
 	{% for author, articles in authors|sort %}
