--- a/templates/categories.html
+++ b/templates/categories.html
@@ -4,7 +4,7 @@
 <div>
 	<article role="article">
     	<header>
-    		<h1 class="entry-title">博文分类</h1>
+    		<h1 class="entry-title">文章分类</h1>
     	</header>
 
 	<p>
