--- a/templates/category.html
+++ b/templates/category.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}Category: {{ category }} &mdash; {{ SITENAME }}{% endblock %}
+{% block title %}分类: {{ category }} &mdash; {{ SITENAME }}{% endblock %}
 {% block content %}
 <div>
 	<article role="article">
@@ -15,12 +15,12 @@
                     <article>
                         <h1><a href="{{ SITEURL }}/{{ article.url }}">{{ article.title }}</a></h1>
                         <time datetime="{{ article.date }}" pubdate>
-                            <span class="month">{{ article.date.strftime('%B')[:3] }}</span>
-                            <span class="day">{{ article.date.strftime('%d') }}</span>
+                            <span class="month">{{ article.date.strftime('%m').lstrip('0') }} 月</span>
+                            <span class="day">{{ article.date.strftime('%d').lstrip('0') }} 日</span>
                             <span class="year">{{ article.date.strftime('%Y') }}</span>
                         </time>
                         <footer>
-                            <span class="categories">posted in
+                            <span class="categories">发布 在
                                 <a class='category' href='{{ SITEURL }}/{{ article.category.url }}'>{{ article.category }}</a>
                             </span>
 			    {% include '_includes/article_stats.html' %}
