--- a/templates/tag.html
+++ b/templates/tag.html
@@ -15,8 +15,8 @@
                     <article>
                         <h1><a href="{{ SITEURL }}/{{ article.url }}">{{ article.title }}</a></h1>
                         <time datetime="{{ article.date }}" pubdate>
-                            <span class="month">{{ article.date.strftime('%B')[:3] }}</span>
-                            <span class="day">{{ article.date.strftime('%d') }}</span>
+                            <span class="month">{{ article.date.strftime('%m').lstrip('0') }} 月</span>
+                            <span class="day">{{ article.date.strftime('%d').lstrip('0') }} 日</span>
                             <span class="year">{{ article.date.strftime('%Y') }}</span>
                         </time>
                         <footer>
