--- a/templates/tags.html
+++ b/templates/tags.html
@@ -4,7 +4,7 @@
 <div>
 	<article role="article">
     	<header>
-    		<h1 class="entry-title">博文标签</h1>
+    		<h1 class="entry-title">文章标签</h1>
     	</header>
 
 	<p>
